--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    box-sizing: border-box;
+  }
+
+ 
 .center{
     margin: 0;
     position: absolute;
@@ -9,10 +14,35 @@
 .navbar{
     text-align: center;
 }
+
+/* Create two equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+
+  }
+  
+  /* Clear floats after the columns */
+  .row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+
 h1, h2, h3{
     text-align: center;
 }
 
 a {
     text-decoration: none;
+    padding: 10px;
   }
+
+input{
+    width: 100%;
+}
+
+button{
+    margin-top: 10px;
+}
